--- a/resApp/public/login.html
+++ b/resApp/public/login.html
@@ -1,7 +1,29 @@
-<form class="form-auth" ng-submit="login()">
-	<h2>Log In</h2>
-	<p class="text-warning">{{error_message}}</p>
-	<input type="username" ng-model="user.username" placeholder="Username" class="form-control"><br>
-	<input type="password" ng-model="user.password" placeholder="Password" class="form-control"><br>
-	<input type="submit" value="Log in" class="btn btn-primary" />
-</form>
+<div class="container">
+    <div class="main-content">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="login-form">
+                    <h2 class="text-center">Welcome!</h2>
+                    <br>
+                    <div class="panel panel-default">
+                        <form class="panel-body" ng-submit="login()">
+                            <div class="form-group">    
+                                <label for="email">Email</label>
+                                <input class="form-control" type="username" ng-model="user.username" placeholder="Username">
+                            </div>
+                            <div class="form-group">
+                                <label for="pwd">Password</label>
+                                <input class="form-control" type="password" ng-model="user.password" placeholder="Password">
+                            </div>
+                            <p class="text-center text-danger">{{error_message}}</p><br>
+                            <button type="submit" class="btn btn-success btn-block">Proceed</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="well text-center">
+                    <a id="signup_button" href="join.html">Create a new account</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
