--- a/resApp/public/login.html
+++ b/resApp/public/login.html
@@ -16,12 +16,12 @@
                                 <input class="form-control" type="password" ng-model="user.password" placeholder="Password">
                             </div>
                             <p class="text-center text-danger">{{error_message}}</p><br>
-                            <button type="submit" class="btn btn-success btn-block">Proceed</button>
+                            <button type="submit" class="btn btn-success btn-block">Login</button>
                         </form>
                     </div>
                 </div>
                 <div class="well text-center">
-                    <a id="signup_button" href="join.html">Create a new account</a>
+                    <a id="signup_button" href="/#/register">Create a new account</a>
                 </div>
             </div>
         </div>
