--- a/resApp/public/login.html
+++ b/resApp/public/login.html
@@ -7,7 +7,7 @@
             <div class="panel panel-default">
                 <form class="panel-body" ng-submit="login()">
                     <div class="form-group">    
-                        <label for="email">Email</label>
+                        <label for="email">Username</label>
                         <input class="form-control" type="username" ng-model="user.username" placeholder="Username">
                     </div>
                     <div class="form-group">
@@ -15,12 +15,12 @@
                         <input class="form-control" type="password" ng-model="user.password" placeholder="Password">
                     </div>
                     <p class="text-center text-danger">{{error_message}}</p><br>
-                    <button type="submit" class="btn btn-success btn-block">Login</button>
+                    <button type="submit" class="btn btn-primary btn-block">Login</button>
                 </form>
             </div>
         </div>
         <div class="well text-center">
-            <a id="signup_button" href="/#/register">Create a new account</a>
+            <a href="/#/register">Create a new account</a>
         </div>
     </div>
 </div>
