--- a/resApp/public/login.html
+++ b/resApp/public/login.html
@@ -4,7 +4,7 @@
         <div class="login-form">
             <h2 class="text-center">Welcome!</h2>
             <br>
-            <div class="panel panel-default">
+            <div class="panel panel-default panel-dark">
                 <form class="panel-body" ng-submit="login()">
                     <div class="form-group">    
                         <label for="email">Username</label>
