--- a/resApp/public/register.html
+++ b/resApp/public/register.html
@@ -2,7 +2,7 @@
     <div class="col-md-6 col-md-offset-3">
         <h2 class="text-center">Create a new account</h2>
         <br>
-        <div class="panel panel-default">
+        <div class="panel panel-default panel-dark">
             <form class="panel-body" ng-submit="register()">
                 <div class="form-group">
                     <label for="exampleInputName2">First name</label>
