--- a/resApp/public/main.html
+++ b/resApp/public/main.html
@@ -14,7 +14,7 @@
     <h3>Postings <small>Find your roommate!</small></h3>
 </div>
 <div id="post-stream">
-    <a class="post list-group-item" href ng-repeat="post in posts | orderBy:'created_at':true" ng-class-odd="'odd'" ng-class-even="'even'">
+    <a class="list-group-item" href ng-repeat="post in posts | orderBy:'created_at':true" ng-class-odd="'odd'" ng-class-even="'even'">
         <div class="row">
             <div class="col-md-3">
                 <div class="span4"></div>
