--- a/resApp/public/register.html
+++ b/resApp/public/register.html
@@ -2,7 +2,7 @@
     <div class="col-md-6 col-md-offset-3">
         <h2 class="text-center">Create a new account</h2>
         <br>
-        <div class="panel panel-default panel-dark">
+        <div class="panel panel-default">
             <form class="panel-body" ng-submit="register()">
                 <div class="form-group">
                     <label for="exampleInputName2">First name</label>
@@ -27,6 +27,9 @@
                 <p class="text-center text-danger">{{error_message}}</p><br>
                 <button type="submit" class="btn btn-success btn-block">Register</button>
             </form>
+        </div>
+        <div class="well text-center">
+            <a href="/#/register">Register with Google accont</a>
         </div>
     </div>   
 </div>
