--- a/resApp/public/main.html
+++ b/resApp/public/main.html
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="span4"></div>
-                <img src={{post.img}} alt="Responsive image" class="img-rounded img-default text-center"/>
+                <img ng-src="img:img/image.png;base64,{{post.img}}" alt="Responsive image" class="img-rounded img-default text-center"/>
                 <div class="span4"></div>
             </div>
             <div class="col-md-9">
