--- a/resApp/public/profile.html
+++ b/resApp/public/profile.html
@@ -1,5 +1,12 @@
 <div class="page-header">
-    <h3>Postings <small>Find your roommate!</small></h3>
+    <h3>Profile <small>@{{current_user}}</small></h3>
 </div>
 <div id="profile-stream">
+    <a class="list-group-item" href ng-repeat="user in users" ng-class-odd="'odd'" ng-class-even="'even'">
+        <div class="row">
+            <div class="col-md-9">
+                <h3 class="list-group-item-heading">{{user.username}} </h3><br>
+            </div>
+        </div>
+    </a>
 </div>
