--- a/resApp/public/main.html
+++ b/resApp/public/main.html
@@ -54,6 +54,10 @@
                 <small>Posted by @{{post.created_by}}</small>
                 <small class="pull-right">{{post.created_at | date:"h:mm a 'on' MMM d, y"}}</small>
             </div>
+            <div class="form-group">   
+                <textarea required class="form-control" maxlength="200" rows="3" placeholder="Comment" ng-model="post.comment"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary text-right" data-toggle="collapse" data-target="#newpost">Post</button>
         </div>
     </a>
 </div>
