--- a/resApp/public/profile.html
+++ b/resApp/public/profile.html
@@ -1,7 +1,7 @@
 <div class="page-header">
     <h3>Profile <small>@{{current_user}}</small></h3>
 </div>
-<div id="profile-stream" ng-controller="authController">
+<div id="profile-stream" ng-controller="userController">
     <a class="list-group-item" href ng-repeat="user in users" ng-class-odd="'odd'" ng-class-even="'even'">
         <div class="row">
             <div class="col-md-9">
