--- a/resApp/public/login.html
+++ b/resApp/public/login.html
@@ -7,8 +7,8 @@
             <div class="panel panel-default">
                 <form class="panel-body" ng-submit="login()">
                     <div class="form-group">    
-                        <label for="email">Username</label>
-                        <input class="form-control" type="username" ng-model="user.username" placeholder="Username">
+                        <label for="email">Email</label>
+                        <input class="form-control" type="username" ng-model="user.username" placeholder="email">
                     </div>
                     <div class="form-group">
                         <label for="pwd">Password</label>
