--- a/resApp/public/login.html
+++ b/resApp/public/login.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="well text-center">
-            <a href="/#/register">Create a new account</a>
+            <a href="/#/signup">Create a new account</a>
         </div>
     </div>
 </div>
