--- a/resApp/public/signup.html
+++ b/resApp/public/signup.html
@@ -6,7 +6,7 @@
             <form class="panel-body" ng-submit="register()">
                 <div class="form-group">    
                     <label for="email">Email</label>
-                    <input type="username" ng-model="user.username" placeholder="Email" class="form-control">
+                    <input type="username" ng-model="user.username" placeholder="Email" class="form-control"> <label> @mail.utoronto.ca </label>
                 </div>
                 <div class="form-group">
                     <label for="pwd">Password</label>
